--- a/mentor_bio.html
+++ b/mentor_bio.html
@@ -39,54 +39,11 @@
               </ul>
       </nav>
 
-      <div class="title">
-        <h4 id="About"><i>About Us</i></h4><br>
-        <h5> 
-          Would you like to share what you have learned about <i>surviving college</i> as a CSE/CIS major? <br>
-          Do you have knowledge about <i>coursework, research, internships and student organizations</i> to share with future CSE/CIS students? <br>
-          If so, you’re invited to apply to be a CSE/CIS Peer mentor! <br>
-        </h5>
-        <br>
-        We are a student org on campus, and we work closely with the CSE advisors to coordinate the program.
-        Our organization provides sophomores, juniors, and seniors with the opportunity to serve as a resource for first-year students during the survey class.
-        If you enjoy to sharing your own successes and the challenges you’ve overcome while adjusting to college life, you would be a great fit. 
-        This is an unpaid opportunity to gain public speaking and teaching assistant experience and looks good on a resume as a leadership position. <br>
+      <div class="intro">
+          <div class="photo"> <img src="img/Ron.jpg"> </div>
+          <div>Scanned from my handwriting</div>
       </div>
-      <br>
-      <h4 id="Lead"><i>Leadership</i></h4><hr>
-      <embed src="img/star.svg" width="16" height="16" type="image/svg+xml"/> <strong>Student Org Advisor</strong>: Kami Westhoff.11
-      <ul>
-        <li> <strong>President</strong>: Aastha Gupta.911 </li>
-        <li> <strong>Vice President</strong>: Yue Zhang.8016 </li>
-        <li> <strong>Treasurer</strong>: Michael Walker.2159 </li>
-        <li> <strong>Secretary</strong>: Ron Chen.8336 </li>
-      </ul>
-      <br>
-      <strong>Former Leaders: </strong>
-      <ul>
-        <li>
-          Academic Year 2019 - 2020: 
-          <ul>
-            <li> President: Laine Rumreich.1 </li>
-            <li> Vice President: Michael Walker.2159 </li>
-            <li> Treasurer: Riya Lengade.3 </li>
-          </ul>
-        </li>
-      </ul>
-      <br>
-      <h4 id="Apply"><i>Apply</i></h4><hr>
-      Eligibility: <br>
-      – Be in good academic standing <br>
-      – Have completed a minimum of 20 hours at OSU by SU20 <br>
-      – Strong listening and communication skills <br>
-      <br>
-      Commitment: 1-2 hours a week, for first session (7 weeks) <br>
-      <br>
-      If you have any questions, please ask your CSE/CIS academic advisor. <br>
-      To apply, you will have to fill out a short survey during the application window. This window is typically February-March. <br>
-      If you have been a peer mentor before, please apply again so that we can track submissions. <br>
-      <br>
-      The application window for CSE/CIS Peer Mentors is currently: CLOSED <br>
+    
     </div>
   </body>
 </html>
