--- a/mentor_bio.html
+++ b/mentor_bio.html
@@ -39,8 +39,8 @@
               </ul>
       </nav>
 
-      <div class="intro">
-          <div class="photo"> <img src="img/Ron.jpg"> </div>
+      <div class="photo">
+          <img src="img/Ron.jpg">
           <div>Scanned from my handwriting</div>
       </div>
       I am currently an undergraduate student at The Ohio State University, pursuing a major in <strong> Computer and Information Science </strong> (with Artificial Intelligence as my specialization) and a minor in Mathematics. 
