--- a/mentor_bio.html
+++ b/mentor_bio.html
@@ -42,7 +42,7 @@
       <div class="bio">
         <div class="intro">
           <div class="photo"> <img src="img/Ron.jpg"> </div>
-          <div>Scanned from my handwriting</div>
+          <div><i>Ron Chen</i></div>
         </div>
         I am currently an undergraduate student at The Ohio State University, pursuing a major in <strong> Computer and Information Science </strong> (with Artificial Intelligence as my specialization) and a minor in Mathematics. 
         Before studying abroad at OSU, I obtained my high school degree from High School Affiliated to Fudan University. <br>
@@ -52,7 +52,7 @@
       <div class="bio">
         <div class="intro">
           <div class="photo"> <img src="img/Ron.jpg"> </div>
-          <div>Scanned from my handwriting</div>
+          <div><i>Ron Chen</i></div>
         </div>
         I am currently an undergraduate student at The Ohio State University, pursuing a major in <strong> Computer and Information Science </strong> (with Artificial Intelligence as my specialization) and a minor in Mathematics. 
         Before studying abroad at OSU, I obtained my high school degree from High School Affiliated to Fudan University. <br>
