--- a/mentor_bio.html
+++ b/mentor_bio.html
@@ -31,10 +31,10 @@
                   <a class="nav-link" href="mentor_bio.html">Mentor Bios</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#Lead">Leadership</a>
+                  <a class="nav-link" href="index.html#Lead">Leadership</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#Apply">Apply</a>
+                  <a class="nav-link" href="index.html#Apply">Apply</a>
                 </li>
               </ul>
       </nav>
