--- a/mentor_bio.html
+++ b/mentor_bio.html
@@ -18,7 +18,8 @@
   </head>
 
   <body>
-    <div class="container" style="text-align:center; margin-top: 15px; margin-bottom: 15px;">
+    <div class="container" style="text-align: center; margin-top: 15px; margin-bottom: 15px;">
+      <a href="https://www.osu.edu/"><img src="img/OSU.png" width="25%"></a>
       <img src="img/CSECISLogoFullColor.png" width="50%">
     </div>
 
