--- a/mentor_bio.html
+++ b/mentor_bio.html
@@ -235,7 +235,7 @@
         Experiences: None <br>
         Involvement: SWE (Society of Women Engineers), ACMW (Association for Computing Machinery's council for Women), AWOW (Advocates for Women of the World), Code for Community <br>
         Interests: In my free time I like to run and spend time outside. I also love to hang out with my friends and explore Columbus! I love going downtown, or to the short north on weekends.  <br>
-        Specialization: I want to work in software engineering! I'm also really interested in the ways that Computer Science can intersect with humanitarianism, and how it can aid overlooked communities and populations of people.  <br>
+        Specialization: software engineering; intersections between Computer Science and humanitarianism <br>
       </div>
       <br><br><br>
       
