--- a/mentor_bio.html
+++ b/mentor_bio.html
@@ -47,7 +47,8 @@
           <div class="photo"> <img src="img/photo/Behr.30.jpg"> </div>
           <div><i>Bryce Behr</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:behr.30@osu.edu">behr.30@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:behr.30@osu.edu">behr.30@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Thurs 1 - 2 <br>
         Minor: Statistics <br>
         Experiences: N/A <br>
         Involvement: Big Data and Analytics Association, AI Club, Competitive Programming Club <br>
@@ -61,7 +62,8 @@
           <div class="photo"> <img src="img/photo/Chen.8336.jpg"> </div>
           <div><i>Ron Chen</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:chen.8336@osu.edu">chen.8336@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:chen.8336@osu.edu">chen.8336@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Tues 9 - 10 <br>
         Minor: Mathematics, Philosophy (about to quit) <br>
         Experiences: CSE 2321 grader <br>
         Involvement: Chinese Students and Scholars Society <br>
@@ -75,7 +77,8 @@
           <div class="photo"> <img src="img/photo/Dixon.773.jpg"> </div>
           <div><i>Corinne Dixon</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:dixon.773@osu.edu">dixon.773@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:dixon.773@osu.edu">dixon.773@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Wed 3 - 4 <br>
         Minor: Mathematics <br>
         Experiences: Software Intern at EDGE Exponential in Gahanna, OH <br>
         Involvement: Society of Women Engineers, Block O <br>
@@ -89,7 +92,8 @@
           <div class="photo"> <img src="img/photo/Folz.10.jpg"> </div>
           <div><i>Sam Folz</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:folz.10@osu.edu">folz.10@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:folz.10@osu.edu">folz.10@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Wed 2 - 3 <br>
         Minor: Business (planning) <br>
         Experiences: ISM Intern at UPS working remotely <br>
         Involvement: Delta Tau Delta Fraternity, Cyber Security Club, Euchre Club <br>
@@ -103,7 +107,8 @@
           <div class="photo"> <img src="img/photo/Gupta.911.jpg"> </div>
           <div><i>Aastha Gupta</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:gupta.911@osu.edu">gupta.911@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:gupta.911@osu.edu">gupta.911@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Mon 10 - 11 <br>
         Minor: Business <br>
         Experiences: Electronics Engineering Intern at Northrop Grumman Aeronautics Systems in Melbourne, Florida <br>
         Involvement: Society of Women Engineers, Girls Who Code: College Loops at Ohio State <br>
@@ -117,7 +122,8 @@
           <div class="photo"> <img src="img/photo/Guzik.21.jpg"> </div>
           <div><i>Noah Guzik</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:guzik.21@osu.edu">guzik.21@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:guzik.21@osu.edu">guzik.21@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Mon 10 - 11 <br>
         Minor: N/A <br>
         Experiences: N/A <br>
         Involvement: Cyber security club <br>
@@ -131,7 +137,8 @@
           <div class="photo"> <img src="img/photo/Hoffmann.323.jpg"> </div>
           <div><i>Cole Hoffmann</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:hoffmann.323@osu.edu">hoffmann.323@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:hoffmann.323@osu.edu">hoffmann.323@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Tues 9 - 10 <br>
         Minor: N/A <br>
         Experiences: N/A <br>
         Involvement: The Maker Club at The Ohio State University <br>
@@ -145,7 +152,8 @@
           <div class="photo"> <img src="img/photo/Kiser.142.jpg"> </div>
           <div><i>Alicia Kiser</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:kiser.142@osu.edu">kiser.142@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:kiser.142@osu.edu">kiser.142@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Tues 11 - 12 <br>
         Minor: Communication Technology <br>
         Experiences: Ohio Space Grant Consortium Summer Intern at Ohio Aerospace Institute in Cleveland, Ohio; CSE 1223 Grader <br>
         Involvement: SWE <br>
@@ -159,7 +167,8 @@
           <div class="photo"> <img src="img/photo/Manouchehri.4.jpg"> </div>
           <div><i>Kayla Manouchehri</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:manouchehri.4@osu.edu">manouchehri.4@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:manouchehri.4@osu.edu">manouchehri.4@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Wed 2 - 3 <br>
         Minor: statistics <br>
         Experiences: Software Engineering Intern at STERIS; I also taught coding camps through TechCorps <br>
         Involvement: Phi Sigma Rho, A Kid Again, and BDAA <br>
@@ -173,7 +182,8 @@
           <div class="photo"> <img src="img/photo/Palanivel.7.jpg"> </div>
           <div><i>Smera Palanivel</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:palanivel.7@osu.edu">palanivel.7@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:palanivel.7@osu.edu">palanivel.7@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Wed 3 - 4 <br>
         Minor: Psychology, Economics <br>
         Experiences: Support Intern at Unific, Tech Intern at MatchTx, Research at Machiraju Lab <br>
         Involvement: BDAA, ACM-W, Buckeyethon, Buckeye Mela <br>
@@ -187,7 +197,8 @@
           <div class="photo"> <img src="img/photo/Qin.439.jpg"> </div>
           <div><i>Gengyi Qin</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:qin.439@osu.edu">qin.439@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:qin.439@osu.edu">qin.439@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Tues 11 - 12 <br>
         Minor: Math <br>
         Experiences: Short research with Boyuan Li from CSE department, CSE 1222 grader <br>
         Involvement: Residential Tutor <br>
@@ -201,7 +212,8 @@
           <div class="photo"> <img src="img/photo/Rumreich.1.jpg"> </div>
           <div><i>Laine Rumreich</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:rumreich.1@osu.edu">rumreich.1@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:rumreich.1@osu.edu">rumreich.1@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Tues 9 - 10 <br>
         Minor: No <br>
         Experiences: Software Engineering Intern at Raytheon Intelligence in Indianapolis, IN; Software Engineering Intern; 
         Product Security Team at Tableau Software in Seattle, WA; URA and GRA in the Engineering Education Department; 
@@ -217,7 +229,8 @@
           <div class="photo"> <img src="img/photo/Schutte.61.jpg"> </div>
           <div><i>Adam Schutte</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:schutte.61@osu.edu">schutte.61@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:schutte.61@osu.edu">schutte.61@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Thurs 1 - 2 <br>
         Minor: No <br>
         Experiences: Embedded Software Engineering Intern at Crown Equipment, Front-End Developer Intern at Crown Equipment, 
         Web Programming Interfaces Intern at SAS, Software Development Intern at Blubrry Podcasting, Software Development Engineering Intern at Expedia Group <br>
@@ -232,7 +245,8 @@
           <div class="photo"> <img src="img/photo/Sharp.475.jpg"> </div>
           <div><i>Mallory Sharp</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:sharp.475@osu.edu">sharp.475@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:sharp.475@osu.edu">sharp.475@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Mon 10 - 11 <br>
         Minor: Studio Art <br>
         Experiences: None <br>
         Involvement: SWE (Society of Women Engineers), ACMW (Association for Computing Machinery's council for Women), AWOW (Advocates for Women of the World), Code for Community <br>
@@ -246,7 +260,8 @@
           <div class="photo"> <img src="img/photo/Suri.39.jpg"> </div>
           <div><i>Pranjal Suri</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:suri.39@osu.edu">suri.39@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:suri.39@osu.edu">suri.39@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Tues 11 - 12 <br>
         Minor: Communication technology <br>
         Experiences: Undergraduate engineering teaching assistant <br>
         Involvement: ACM-W <br>
@@ -260,7 +275,8 @@
           <div class="photo"> <img src="img/photo/Tucker.775.jpg"> </div>
           <div><i>Jamie Tucker</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:tucker.775@osu.edu">tucker.775@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:tucker.775@osu.edu">tucker.775@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Mon 10 - 11 <br>
         Minor: N/A <br>
         Experiences: STEP Intern at Google <br>
         Involvement: National Society of Black Engineers (NSBE), Morrill Scholarship Program (MSP), Second-Year Transformational Experience Program (STEP) <br>
@@ -274,7 +290,8 @@
           <div class="photo"> <img src="img/photo/Xiong.336.jpg"> </div>
           <div><i>Kyle Xiong</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:xiong.336@osu.edu">xiong.336@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:xiong.336@osu.edu">xiong.336@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Wed 3 - 4 <br>
         Minor: No <br>
         Experiences: Summer Research Project, advised by Prof. Han-Wei Shen at Ohio State <br>
         Involvement: Chinese Folk Music Orchestra <br>
@@ -288,7 +305,8 @@
           <div class="photo"> <img src="img/photo/Zhang.9485.jpg"> </div>
           <div><i>Zina Zhang</i></div>
         </div>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:zhang.9485@osu.edu">zhang.9485@osu.edu</a> <br>
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:zhang.9485@osu.edu">zhang.9485@osu.edu</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> Wed 2 - 3 <br>
         Minor: Math and Communication <br>
         Experiences: 3 Day Paid ME RESEARCH WITH RELIABILITY AND RISK LABORATORY; RESOLVE Software Research Group <br>
         Involvement: Office Assistant in the resident hall; Media Marketing and Communication Scholar Program; Chinese Student and Scholar Society; Buck-I-Serve in Florida; Pre Departure Orientation <br>
