--- a/mentor_bio.html
+++ b/mentor_bio.html
@@ -74,6 +74,7 @@
         Involvement: National Society of Black Engineers <br>
         Interests: Cooking, Watching TV, Hanging kit with friends <br>
         Specialization: Software Engineering  <br>
+        <br><br><br>
       </div>
       <br><br>
       
@@ -103,8 +104,8 @@
         Experiences:2020: Software Engineering Intern, BrightHire.ai; 
         019: Technical Product Manager Intern, Aptiv; 
         2018: Product Designer, Enterprise Data Solutions; 
-        2019: FEH Undergraduate Teaching Assistant, Department of Engineering Education. <br>
-        Involvement: University Innovation Fellows, Integrated Business & Engineering Honors Program , (formerly: Business Builders, Ascent Microfinance ) <br>
+        2019: FEH Undergraduate Teaching Assistant. <br>
+        Involvement: University Innovation Fellows, Integrated Business & Engineering Honors Program <br>
         Interests: Cooking, Backyard bonfires, Sketching, Cars / Automotive Industry, Reading Non-fiction (books on business, economics, & sociology) <br>
         Specialization: software engineering, product design, product management, user research <br>
       </div>
