--- a/mentor_bio.html
+++ b/mentor_bio.html
@@ -107,7 +107,7 @@
         2019: FEH Undergraduate Teaching Assistant. <br>
         Involvement: University Innovation Fellows, Integrated Business & Engineering Honors Program <br>
         Interests: Cooking, Backyard bonfires, Sketching, Cars / Automotive Industry, Reading Non-fiction (books on business, economics, & sociology) <br>
-        Specialization: software engineering, product design, product management, user research <br>
+        Specialization: software engineering, product design and management, user research <br>
       </div>
       <br><br>
 
